# beyond_the_equation

./: LICENSE-MIT  README.md
2025/1_harnessing_chaos/: .gitignore  Justfile  Manifest.toml  Project.toml  README.md  devenv.nix  flake.nix  pyproject.toml
2025/1_harnessing_chaos/.helix/: languages.toml
2025/1_harnessing_chaos/presentation/: harnessing_chaos.py
2025/1_harnessing_chaos/src/: HarnessingChaos.jl  HarnessingChaosPluto.jl  harnessing_chaos.ipynb
