[project]
name = "harnessing_chaos"
version = "0.1.0"
description = "Generating random numbers using everyday chaos!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "catppuccin-jupyterlab>=0.2.4",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "manim>=0.19.0",
  "manim-slides[manim,pyside6]>=5.4.2",
  "numpy>=2.2.2",
]

[dependency-groups]
dev = ["basedpyright>=1.26.0", "ruff>=0.9.4"]
